file(GLOB TOOL_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(TOOL_SRC ${TOOL_SRCS})
  string(REGEX REPLACE ".+/(.+)\\..*" "\\1" TOOL_NAME ${TOOL_SRC})
  add_executable(${TOOL_NAME} ${TOOL_SRC})
  target_link_libraries(${TOOL_NAME} PRIVATE parking_plotter)
  target_compile_options(${TOOL_NAME} PRIVATE "-Wno-return-type")
  find_package(Threads REQUIRED)
  if(CMAKE_USE_PTHREADS_INIT)
    target_link_libraries(${TOOL_NAME} PRIVATE pthread)
  endif()
  install(TARGETS ${TOOL_NAME} DESTINATION bin)
endforeach()
